# Anima-Engine

./: .gitignore  AI_Context.md  ORIGINAL_REQUEST.md  PROJECT.md  TEST_INFRA.md  TEST_READY.md  TODO.md  debug_ecosystem.html  index.html  landscape.html  package-lock.json  package.json  plan.md  progress.md  tsconfig.json  update_vegetation.js  vite.config.ts
src-tauri/: Cargo.toml  err.txt  err2.txt  err_utf8.txt  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: cpg.rs  hrrl.rs  mod.rs  (+2 more)
src-tauri/tests/: adversarial_challenger_tests.rs  adversarial_coverage_tests.rs  brain_tests.rs  burn_neural_net_tests.rs  challenger_meta_ai_tests.rs  decoupling_tests.rs  ecs_simulation_tests.rs  environmental_elements_stress_tests.rs  environmental_elements_tests.rs  evolution_robustness_tests.rs  genotype_tests.rs  homeostatic_rl_tests.rs  hrrl_tests.rs  lineage_stress_tests.rs  lineage_tests.rs  map_elites_tests.rs  meta_ai_stress_tests.rs  meta_ai_tests.rs  migration_high_throughput_tests.rs  migration_narrow_bounds_loop_tests.rs  migration_panic_tests.rs  migration_stress_tests.rs  migration_tests.rs  migration_zero_alloc_tests.rs  morphology_tests.rs  persistence_stress_tests.rs  persistence_tests.rs  phase5_burn_wgpu_fallback.rs  phase5_crossbeam_channels.rs  phase5_gemini_websession.rs  phase5_modularity_zero_alloc.rs  phase5_websocket_reuse.rs  pheromone_tests.rs  physics_tests.rs  predator_prey_combat_tests.rs  simulation_tests.rs  tauri_ipc_phase2_tests.rs  tauri_ipc_tests.rs
(+133 files in other folders)
